# Polyulatex

./: CMakeLists.txt  JYY_Beamer.sty  OWNERS  README.en.md  README.md  build.sh  classify_rule.txt  module.mk  pom.xml  ref.bib  slide.tex
cmake/external_libs/: gtest.cmake  jpeg_host.cmake  json.cmake  protobuf_shared.cmake  protoc.cmake  securec.cmake
common/: acl.cpp  common_inner.h  error_codes_api.cpp  error_codes_api.h  error_codes_inner.h  json_parser.cpp  json_parser.h  log.cpp  log_inner.cpp  log_inner.h
model/: acl_aipp.cpp  aipp_param_check.cpp  aipp_param_check.h  model.cpp  model_config.cpp  model_config.h  model_desc_internal.h
proto/: om.proto
runtime/: callback.cpp  context.cpp  device.cpp  event.cpp  group.cpp  memory.cpp  set_device_vxx.h  stream.cpp
single_op/: ge_tensor_cache.cpp  ge_tensor_cache.h  op.cpp  op_compiler.cpp  op_executor.cpp  op_executor.h  op_model_cache.cpp  op_model_cache.h  op_model_manager.cpp  op_model_manager.h  op_model_parser.cpp  op_model_parser.h
single_op/blas/: gemm_ops.cpp  gemv_ops.cpp
single_op/builtin/: cast_op.cpp  transdata_op.cpp
single_op/compile/: local_compiler.cpp  local_compiler.h  op_compile_processor.cpp  op_compile_processor.h  op_compile_service.cpp  op_compile_service.h  op_compiler.cpp  op_compiler.h  op_kernel_registry.cpp  op_kernel_registry.h  op_kernel_selector.cpp  op_kernel_selector.h
single_op/dvpp/: channel.cpp  jpeg.cpp  png.cpp  vdec.cpp  venc.cpp  vpc.cpp
single_op/dvpp/base/: image_processor.cpp  image_processor.h  video_processor.cpp  video_processor.h
single_op/dvpp/common/: callback_info_manager.h  dvpp_def_internal.h  dvpp_util.cpp  dvpp_util.h
single_op/dvpp/mgr/: dvpp_manager.cpp  dvpp_manager.h
single_op/dvpp/v100/: image_processor_v100.cpp  image_processor_v100.h  video_processor_v100.cpp  video_processor_v100.h
single_op/dvpp/v200/: image_processor_v200.cpp  image_processor_v200.h  video_processor_v200.cpp  video_processor_v200.h
single_op/executor/: op_task.cpp  op_task.h  resource_manager.cpp  resource_manager.h  stream_executor.cpp  stream_executor.h
single_op/retr/: retr_accurate.cpp  retr_accurate.h  retr_init.cpp  retr_init.h  retr_internal.cpp  retr_internal.h  retr_ops.cpp  retr_release.cpp  retr_release.h  retr_repo.cpp  retr_repo.h  retr_search.cpp  retr_search.h
src/main/java/com/alipay/controller/: AlipayController.java  UserController.java  WxpayController.java
src/main/java/com/alipay/dataobject/: Flow.java  FlowExample.java  Orders.java  OrdersExample.java  Product.java  ProductExample.java  User.java  UserExample.java
src/main/java/com/alipay/mapper/: FlowMapper.java  FlowMapper.xml  OrdersMapper.java  OrdersMapper.xml  ProductMapper.java  UserMapper.java
src/main/java/com/alipay/service/: OrdersService.java  ProductService.java  UserService.java
src/main/resources/: db.sql  log4j.properties
src/main/resources/log4j2/: log4j2.xml
src/main/resources/spring/: applicationContext-service.xml
src/main/webapp/WEB-INF/: web.xml
stub/: Makefile  README.md  gen_stubapi.py  libjpeg_lhisi_stub.cpp
tensor_data_transfer/: queue.cpp  queue.h  queue_manager.cpp  queue_manager.h  queue_process.cpp  queue_process.h  queue_process_ccpu.cpp  queue_process_ccpu.h  queue_process_host.cpp  queue_process_host.h  queue_process_mdc.cpp  queue_process_mdc.h  tensor_data_transfer.cpp  tensor_data_transfer.h
tests/: CMakeLists.txt
tests/depends/: acl_stub.h
tests/depends/ge/: CMakeLists.txt
tests/depends/ge/src/: ge_stub.cpp
tests/depends/jpeg/: CMakeLists.txt
tests/depends/jpeg/src/: jpeg_stub.cpp  jpeg_stub.h
tests/depends/mmpa/: CMakeLists.txt
tests/depends/mmpa/src/: mmpa_stub.cpp
tests/depends/profiling/: CMakeLists.txt
tests/depends/profiling/src/: profiling_stub.cpp
tests/depends/runtime/: CMakeLists.txt
tests/depends/runtime/src/: runtime_stub.cpp
tests/depends/slog/: CMakeLists.txt
tests/depends/slog/src/: slog_stub.cpp
tests/depends/tdt/: CMakeLists.txt
tests/depends/tdt/src/: tdt_stub.cpp
tests/depends/toolchain/: CMakeLists.txt
tests/depends/toolchain/src/: adx_datadump_server.h  toolchain_stub.cpp
tests/ut/: CMakeLists.txt  runtest.sh
tests/ut/acl/: CMakeLists.txt
tests/ut/acl/json/: aging.json  dumpConfig.json  handleOpConfig.json  profConfig.json  profilingConfig.json  testDump1.json  testDump10.json  testDump11.json  testDump12.json  testDump13.json  testDump14.json  testDump15.json  testDump16.json  testDump17.json  testDump2.json  testDump3.json  testDump4.json  testDump5.json  testDump6.json  testDump7.json  testDump8.json  testDump9.json
tests/ut/acl/testcase/: acl_blas_unittest.cpp  acl_builtinOp_unittest.cpp  acl_channel_unittest.cpp  acl_common_unittest.cpp  acl_dvpp_unittest.cpp  acl_fp16_unittest.cpp  acl_jpeg_unittest.cpp  acl_model_unittest.cpp  acl_opAttr_unittest.cpp  acl_opCompile_unittest.cpp  acl_opExecutor_unittest.cpp  acl_opModelCache_unittest.cpp  acl_opModelManager_unittest.cpp  acl_opModelParser_unittest.cpp  acl_op_unittest.cpp  acl_png_unittest.cpp  acl_queue_unittest.cpp  acl_retrInternal_unittest.cpp  acl_retrOps_unittest.cpp  acl_retr_unittest.cpp  acl_runtime_unittest.cpp  acl_tensorDataTransfer_unittest.cpp  acl_toolchain_unittest.cpp  acl_vdec_unittest.cpp  acl_venc_unittest.cpp  acl_vpc_unittest.cpp  main.cpp  test.cpp
tests/ut/acl/testcase/compatibility/: const_check.cpp  enum_check.cpp  struct_check.cpp
tests/ut/compatibility/: const_check.cpp  offset_check.cpp
toolchain/: acl_prof_api.cpp  dump.cpp  dump.h  profiling.cpp  profiling.h  profiling_manager.cpp  profiling_manager.h  resource_statistics.cpp  resource_statistics.h
types/: acl_op.cpp  acl_op.h  dvpp.cpp  fp16.cpp  fp16_impl.cpp  fp16_impl.h  op_attr.cpp  op_attr.h  op_model.cpp  op_model.h  retr.cpp  tensor_desc_internal.cpp  tensor_desc_internal.h
utils/: acl_dynamic_shape_op_map.h  acl_jpeglib.h  acl_op_map.h  array_utils.cpp  array_utils.h  attr_utils.cpp  attr_utils.h  file_utils.cpp  file_utils.h  hash_utils.cpp  hash_utils.h  math_utils.cpp  math_utils.h  string_utils.cpp  string_utils.h
(+36 files in other folders)
